# ai-tools

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  delivery-plan.md
social-content-factory/: .gitignore  AGENTS.md  README.md  delivery-plan.md  pyproject.toml  requirements.txt  start.sh
social-content-factory/brands/: personal.yaml
social-content-factory/social_content_factory/: brand_loader.py  brief_builder.py  caption_generator.py  cli.py  comfyui_client.py  instagram_publisher.py  llm_client.py  outbox_writer.py  pipeline.py  publish_plan.py  status_log.py  theme_loader.py  tts_client.py  video_renderer.py  voiceover_generator.py  workflow_template.py
social-content-factory/tests/: test_brand_loader.py  test_brief_builder.py  test_caption_generator.py  test_cli_ingest.py  test_cli_promote.py  test_cli_publish.py  test_cli_render.py  test_comfyui_client.py  test_github_releases.py  test_instagram_publisher.py  test_outbox_writer.py  test_pipeline.py  test_publish_plan.py  test_ranker.py  test_status_log.py  test_suggested_writer.py  test_theme_loader.py  test_tts_client.py  test_video_renderer.py  test_voiceover_generator.py  test_workflow_template.py
social-content-factory/themes/: personal.yaml
social-content-factory/workflows/: image_sd35_base.json
work-ai-tools/: .env.example  boards.yaml.example  pyproject.toml
work-ai-tools/tests/: test_safety.py
work-ai-tools/work_ai/: __init__.py  board_config.py  board_observer.py  config.py  github_api_client.py  github_client.py  llm_handler.py  login_setup.py  monday_client.py  routes.py  safety.py  (+1 more)
(+187 files in other folders)
