[project]
name = "social-content-factory"
version = "0.1.0"
description = "Theme to social-media-ready image and video assets, generated locally on RTX 3080"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.21.0",
]

[project.scripts]
factory = "social_content_factory.cli:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["social_content_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
