[project]
name = "work-ai-tools"
version = "0.1.0"
description = "Work automation tools — GitHub Projects, Monday.com, local LLM query parsing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["work_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
